html and css updates

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,50 @@
-<h1>Tara Bergener</h1>
+<body>
+    <h1>Welcome to CSE Motors!</h1>
+    <section class="hero">
+        <span class="hero-content">
+            <img src="/images/vehicles/delorean.jpg" alt="Delorean Car Image" id="hero-image">
+        </span>
+    </section>
+    <div class="delorean">
+        <h3>DMC Delorean</h3>
+        <li>3 Cup holders</li>
+        <li>Superman doors</li>
+        <li>Fuzzy dice!</li>
+        <button class="button">Own Today</button>
+    </div>
+    <div class="upgrades">
+        <h4>Delorean Upgrades</h4>
+        <div class="first">
+            <picture>
+                <img src="images/upgrades/flux-cap.png" alt="flux caps">
+            </picture>
+            <li><a href="#" title="Flux capacitor">Flux Capacitor</a></li>
+        </div>
+        <div class="second">
+            <picture>
+                <img src="images/upgrades/flame.jpg" alt="flame decals">
+            </picture>
+            <li><a href="#" title="Flame decals">Flame Decals</a></li>
+        </div>
+        <div class="third">
+            <picture>
+                <img src="images/upgrades/bumper_sticker.jpg" alt="bumper stickers">
+            </picture>
+            <li><a href="#" title="Bumper stickers">Bumper Stickers</a></li>
+        </div>
+        <div class="fourth">
+            <picture>
+                <img src="images/upgrades/hub-cap.jpg" alt="hub caps">
+            </picture>
+            <li><a href="#" title="Hub caps">Hub Caps</a></li>
+        </div>
+    </div>
+    <div class="reviews">
+        <h4>DMC Delorean Reviews</h4>
+        <li>"So fast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futuristic ride of our day." (4.5/5)</li>
+        <li>"80's livin and I love it!" (5/5)</li>
+    </div>
+</body>
