--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,6 +3,8 @@
 <%- include('../partials/head') %>
 
 <body>
+    <div class="background"></div>
+    <div class="background1"></div>
     <div id="wrapper">
         <%- include('../partials/header') %>
         <%- include('../partials/navigation') %>
