--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,370 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+/* Background image */
+.background {
+  background-image: url('/images/site/small_check.jpg');
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0; 
+  z-index: -2;
+}
+
+.background1 {
+  background-color: white;
+  background-size: cover;
+  width: 90%;
+  height: 95%;
+  position: absolute;
+  top: 2%;
+  left: 5%;
+  z-index: -1;
+  border: 5px solid rgb(33, 186, 206);
+  border-radius: 10px;
+}
+
+/* header */
+#top-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.siteName {
+  font-size: 40px;
+  display: flex;
+  padding-top: 25px;
+  padding-left: 8%;
+}
+
+.siteName a, #tools a {
+  text-decoration: none;
+  color: black;
+  font-family: 'Roboto', sans-serif
+}
+
+#tools {
+  justify-content: right;
+  text-decoration: none;
+  padding-top: 25px;
+  padding-right: 8%;
+}
+
+/* Navigation Bar */
+nav {
+  background-color: rgb(41, 40, 40);
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  margin-left: 7%; 
+  margin-right: 7%;
+  border-radius: 2px;
+}
+
+nav li {
+  list-style-type: none;
+  float: left;
+}
+
+nav li a {
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding-right: 90px;
+}
+
+/* Body */
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+}
+
+/* Delorean content */
+.hero {
+  display: flex;
+  justify-self: center;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+h1 {
+  justify-self: left;
+  margin-left: 8%;
+  margin-bottom: 25px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.hero {
+  position: relative;
+  justify-content: center;
+  width: 50%;
+  height: auto;
+}
+
+.hero img {
+  height: 235px;
+  width: auto;
+}
+
+.delorean {
+  position: absolute;
+  justify-self: left;
+  justify-items: left;
+  margin-top: 90px;
+  margin-left: 15%;
+  background-color: rgba(255, 255, 255, 0.719);
+  border-radius: 2px;
+}
+
+.delorean h3 {
+  color: rgb(33, 186, 206);
+  padding: 1px;
+  margin-bottom: 5px;
+  font-size: 25px;
+  font-family: 'Merriweather', sans-serif;
+}
+
+.delorean li {
+  list-style-type: none;
+  color: rgb(33, 186, 206);
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px;
+}
+
+button {
+  background-color: rgb(33, 186, 206);
+  border: none;
+  margin-top: 25px;
+  border-radius: 3px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 35px;
+  padding-left: 35px;
+  font-weight: bold;
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+}
+
+/* Upgrades and Reviews */
+section .upgrades {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.upgrades li {
+  list-style-type: none;
+  justify-self: center;
+}
+
+.upgrades li a {
+  color: blue;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+}
+
+.upgrades {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+.upgrades h4 {
+  position: absolute;
+  font-size: 18px;
+  font-family: 'Merriweather', sans-serif;
+  margin-top: 40px;
+}
+
+.upgrades picture {
+  display: flex;
+  background: rgb(33, 186, 206);
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  justify-content: center;
+  border-radius: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.first, .second {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin-bottom: 15px;
+}
+
+.third, .fourth {
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.first, .third {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.second, .fourth {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+picture img {
+  height: 65px;
+  padding: 5px;
+  width: auto;
+}
+.reviews h4 {
+  font-size: 18px;
+  font-family: 'Merriweather', sans-serif;
+  margin-top: 45px;
+  margin-bottom: 35px;
+}
+
+.reviews li {
+  padding: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+}
+
+/* Footer */
+footer {
+  position: absolute;
+  margin-top: 75px;
+  margin-left: 6%;
+}
+
+@media all and (max-width: 840px) {
+
+  /* Navigation Bar */
+  nav li a {
+    padding-right: 50px;
+  }
+
+  /* Header */
+  h1 {
+    font-size: 30px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  /* Background */
+  .background {
+    background-image: none;
+  }
+
+  .background1 {
+    border: none;
+  }
+
+  /* Navigation Bar */
+  nav {
+    padding: 0px;
+  }
+
+  nav li a {
+    padding-right: 28px;
+    font-size: 15px;
+  }
+
+  /* Header */
+  h1 {
+    font-size: 22px;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  /* Hero image */
+  .hero img {
+    width: 325px;
+    height: auto;
+    margin-top: 50px;
+    padding-bottom: 0;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .hero {
+    margin-top: 0px;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .delorean {
+    margin-top: 50px;
+    margin-left: 9%;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  
+  .delorean h3 {
+    font-size: 19px;
+  }
+  
+  .delorean li {
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+  }
+  
+  button {
+    background-color: rgb(33, 186, 206);
+    border: none;
+    margin-top: 5px;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-weight: bold;
+    font-size: 15px;
+  }
+
+  /* Body */
+  main {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+  }
+
+  /* Upgrades and Reviews */
+  .upgrades {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    justify-self: left;
+    margin-left: 8%;
+  }
+
+  .reviews {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    justify-self: left;
+    margin-left: 8%;
+  }
+
+  .reviews h4 {
+    margin-bottom: 5px;
+  }
+
+  .reviews li {
+    padding: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+  }
+
+  /* Footer */
+  footer {
+    margin: 0;
+    padding: 0;
+  }
 }
