--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav>
-    <ul>
-        <li><a href="index.ejs" title="CSE Motors home page">Home</a></li>
-        <li><a href="#" title="Custom cars page">Custom</a></li>
-        <li><a href="#" title="Sedans car page">Sedan</a></li>
-        <li><a href="#" title="SUV car page">SUV</a></li>
-        <li><a href="#" title="Truck car page">Truck</a></li>
-    </ul>
+<%- nav %>
 </nav>
