--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -6,5 +6,5 @@
     } %>
 
 <%# A message block available for messages we want to add to the page later%>
-<%- messages("404 Page Not Found") %>
+<%- message %>
 
