--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,6 +103,7 @@ h1 {
   margin-bottom: 25px;
   grid-column-start: 1;
   grid-column-end: 3;
+  font-family: 'Merriweather', sans-serif;
 }
 
 .hero {
@@ -240,6 +241,72 @@ picture img {
   font-size: 15px;
 }
 
+/* Categories view inventory*/
+#inv-display {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
+}
+
+#inv-display li {
+  flex: 1 1 calc(33.333% - 20px);
+  box-sizing: border-box;
+  padding: 20px;
+  border: 1px solid #dfdfdf;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  list-style-type: none;
+}
+
+.namePrice h2 a {
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+}
+
+#inv-display li img {
+  height: 100px;
+  width: auto;
+}
+
+/* Single view inventory*/
+.car-container {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+  flex-direction: row;
+  font-family: 'Merriweather', sans-serif;
+}
+
+.car-container img {
+  height: 350px;
+  width: auto;
+  margin: 5%;
+  padding: 15px;
+}
+
+.car-details {
+  margin-right: 5%;
+}
+
+.car-details li {
+  list-style-type: none;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.price {
+ font-size: 40px;
+}
+
 /* Footer */
 footer {
   position: absolute;
@@ -247,7 +314,7 @@ footer {
   margin-left: 6%;
 }
 
-@media all and (max-width: 840px) {
+@media all and (max-width: 980px) {
 
   /* Navigation Bar */
   nav li a {
@@ -258,9 +325,28 @@ footer {
   h1 {
     font-size: 30px;
   }
+
+  /* Single inventory details */
+  .car-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .car-container img {
+    height: auto;
+    width: 500px;
+    padding: 0px 35px 0px 35px;
+    margin-right: 75px;
+    margin-left: 75px;
+  }
+
+  .car-details {
+    margin-right: 100px;
+    margin-left: 80px;
+  }
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 700px) {
   /* Background */
   .background {
     background-image: none;
@@ -361,6 +447,23 @@ footer {
     padding: 5px;
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
+  }
+
+  /* Single view inventory*/
+  .car-container img {
+    margin: 7%;
+    padding: 7%;
+    height: auto;
+    width: auto;
+  }
+
+  .price {
+    font-size: 25px;
+   }
+
+  .car-details {
+    font-size: 15px;
+    margin: 7%;
   }
 
   /* Footer */
