--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <% const d = new Date()
 let year = d.getFullYear() %>
 <footer>
-    <p class="copyright">&copy;<%= year %>, CSE 340 App</p>    
+    <p class="copyright">&copy;<%= year %>, CSE 340 App</p>
+    <a href="../../controllers/baseController">Error Link</a>
 </footer>
