--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,10 +1,11 @@
 <%# A consistant header among pages%>
 <% if (title) { %>
-    <h1><%= title %></h1>
-    <% } else {
-      res.redirect('/')
-    } %>
+<h1><%= title %></h1>
+<% } else {
+  res.redirect('/')
+} %>
 
 <%# A message block available for messages we want to add to the page later%>
 <%# message %>
 
+<%- logView %>
