--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,7 +4,8 @@
     <% } else {
       res.redirect('/')
     } %>
-
-<%# A message block available for messages we want to add to the page later%>
-<%# message %>
-
+    
+    <%# A message block available for messages we want to add to the page later%>
+    <%# message %>
+    
+    <%- regView %>
