--- a/views/inventory/single.ejs
+++ b/views/inventory/single.ejs
@@ -8,6 +8,6 @@
 <%# A message block available for messages we want to add to the page later%>
 <%# messages() %>
 
-<%# The code to display the grid %>
+<%# The code to display the single view %>
 <%# This code is very simple the view is meant to display content, not necessarily to contain logic %>
 <%- view %>
