--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,6 +58,11 @@
   padding-right: 8%;
 }
 
+/* Messages */
+#messages {
+  color: red;
+}
+
 /* Navigation Bar */
 nav {
   background-color: rgb(41, 40, 40);
@@ -89,6 +94,23 @@ main {
   justify-items: center;
 }
 
+/* Login form */
+.login-form {
+  font-family: 'Roboto', sans-serif;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  margin-right: 25%;
+  margin-left: 25%;
+  padding: 5%;
+  background-color: rgb(32, 140, 173);
+  border-radius: 5px ;
+}
+
+input {
+  margin-bottom: 5px;
+  size
+}
+
 /* Delorean content */
 .hero {
   display: flex;
@@ -106,9 +128,10 @@ h1 {
   font-family: 'Merriweather', sans-serif;
 }
 
-.hero {
+div.hero {
   position: relative;
   justify-content: center;
+  margin-top: 20px;
   width: 50%;
   height: auto;
 }
@@ -122,7 +145,7 @@ h1 {
   position: absolute;
   justify-self: left;
   justify-items: left;
-  margin-top: 90px;
+  margin-top: 120px;
   margin-left: 15%;
   background-color: rgba(255, 255, 255, 0.719);
   border-radius: 2px;
