--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <div class="hero">
     <span class="hero-content">
         <img src="/images/vehicles/delorean.jpg" alt="delorean car" id="hero-image">
