--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,6 +6,29 @@
 } %>
 
 <%# A message block available for messages we want to add to the page later%>
-<%# message %>
+<%- messages() %>
 
-<%- logView %>
+<%# Code block to display errors %>
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
+<%# Placeholder for login view if built in utilities folder %>
+<%# logView %>
+
+<form class="login-form" action="/account/login" method="post">
+<fieldset>
+<label for="account_email"><strong>Email Address:</strong></label><br>
+<input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>"><br>
+<label for="account_password"><strong>Password:</strong></label><br>
+<input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
+<span>Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.</span>
+<input type="button" value="Show Password"><br>
+<input type="submit" value="Login">
+<p>No account? <a href="../../account/register">Sign-up</a></p>
+</fieldset>
+</form>
