--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,11 +1,37 @@
 <%# A consistant header among pages%>
 <% if (title) { %>
-    <h1><%= title %></h1>
-    <% } else {
-      res.redirect('/')
-    } %>
-    
-    <%# A message block available for messages we want to add to the page later%>
-    <%# message %>
-    
-    <%- regView %>
+<h1><%= title %></h1>
+<% } else {
+  res.redirect('/')
+} %>
+
+<%# A message block available for messages we want to add to the page later%>
+<%- messages() %>
+
+<%# Code block to display errors %>
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
+<div>
+  <p>ALL FIELDS ARE REQUIRED.</p>
+  <form class="register-form" action="/account/register" method="post">
+    <fieldset>
+      <label for="account_firstname"><strong>First Name:</strong></label><br>
+      <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname %>"><br>
+      <label for="account_lastname"><strong>Last Name:</strong></label><br>
+      <input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>"><br>
+      <label for="account_email"><strong>Email Address:</strong></label><br>
+      <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>" placeholder="Enter a valide email address"><br>
+      <label for="account_password"><strong>Password:</strong></label><br>
+      <input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
+      <span>Passwords must be minimum of 12 characters and include 1 capital letter, 1 number and 1 special character.</span><br>
+      <span id="pswdbtn">Show Password</span><br>
+      <input type="submit" value="Register">
+    </fieldset>
+  </form>
+</div>
