--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -5,4 +5,16 @@
   res.redirect('/')
 } %>
 
+<%# A message block available for messages we want to add to the page later%>
+<%- messages() %>
+
+<%# Code block to display errors %>
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
 <%- manageView %>
