add vehicle management

--- a/views/inventory/add-vehicle.ejs
+++ b/views/inventory/add-vehicle.ejs
@@ -21,16 +21,26 @@
     <p>ALL FIELDS ARE REQUIRED.</p>
     <form class="new-vehicle-form" action="/inv/add-vehicle/" method="post">
       <fieldset>
-        <label for="classification_name"><strong>Classification:</strong></label><br>
-        <select name="classification_name" id="classification_name" required><br>
-            <script>
-            let data = await invModel.getClassifications()
-            data.rows.forEach((row) => {
-                list += "<li>"
-                list += row.classification_name
-                list += "</li>"
-              })
-            </script>
+        <label for="classification_name"><strong>Classification</strong></label><br>
+        <%- classList %><br>
+        <label for="inv_make"><strong>Make</strong></label><br>
+        <input type="text" id="inv_make" name="inv_make" required placeholder="Min of 3 characters"><br>
+        <label for="inv_model"><strong>Model</strong></label><br>
+        <input type="text" id="inv_model" name="inv_model" required placeholder="Min of 3 characters"><br>
+        <label for="inv_description"><strong>Description</strong></label><br>
+        <textarea id="inv_description" name="inv_description" required placeholder="Describe this vehicle."></textarea><br>
+        <label for="inv_image"><strong>Image Path</strong></label><br>
+        <input type="text" id="inv_image" name="inv_image" required><br>
+        <label for="inv_thumbnail"><strong>Thumbnail Path</strong></label><br>
+        <input type="text" id="inv_thumbnail" name="inv_thumbnail" required><br>
+        <label for="inv_price"><strong>Price</strong></label><br>
+        <input type="number" id="inv_price" name="inv_price" required placeholder="decimal or integer"><br>
+        <label for="inv_year"><strong>Year</strong></label><br>
+        <input type="number" id="inv_year" name="inv_year" required placeholder="4-digit year"><br>
+        <label for="inv_miles"><strong>Miles</strong></label><br>
+        <input type="number" id="inv_miles" name="inv_miles" required placeholder="digits only"><br>
+        <label for="inv_color"><strong>Color</strong></label><br>
+        <input type="text" id="inv_color" name="inv_color" required><br>
         <input type="submit" value="Add Vehicle">
       </fieldset>
     </form>
