--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -17,7 +17,7 @@
  </ul>
 <% } %>
 
-<div>
+<div class="form">
     <p>ALL FIELDS ARE REQUIRED.</p>
     <form class="new-class-form" action="/inv/add-classification/" method="post">
       <fieldset>
