--- a/views/account/account-manage.ejs
+++ b/views/account/account-manage.ejs
@@ -17,14 +17,4 @@
  </ul>
 <% } %>
 
-<%- manageView %>
-
-<h2>Manage Inventory</h2>
-<p>Choose a classificaiton to see those inventory items.</p>
-<%- classificationSelect %>
-
-<table id="inventoryDisplay"></table>
-
-<noscript>JavaScript must not be enabled to use this page.</noscript>
-
-<script src="../../js/inventory.js"></script>
+<p>You're logged in.</p>
