--- a/views/inventory/add-vehicle.ejs
+++ b/views/inventory/add-vehicle.ejs
@@ -28,9 +28,9 @@
         <label for="inv_model"><strong>Model</strong></label><br>
         <input type="text" id="inv_model" name="inv_model" required placeholder="Min of 3 characters" value="<%= locals.inv_model %>"><br>
         <label for="inv_description"><strong>Description</strong></label><br>
-        <textarea id="inv_description" name="inv_description" required placeholder="Describe this vehicle." value="<%= locals.inv_description %>"></textarea><br>
+        <textarea id="inv_description" name="inv_description" rows="4" cols="50" required placeholder="Describe this vehicle."><%= locals.inv_description %></textarea><br>
         <label for="inv_image"><strong>Image Path</strong></label><br>
-        <input type="text" id="inv_image" name="inv_image" required value="<%= locals.account_image %>"><br>
+        <input type="text" id="inv_image" name="inv_image" required value="<%= locals.inv_image %>"><br>
         <label for="inv_thumbnail"><strong>Thumbnail Path</strong></label><br>
         <input type="text" id="inv_thumbnail" name="inv_thumbnail" required value="<%= locals.inv_thumbnail %>"><br>
         <label for="inv_price"><strong>Price</strong></label><br>
