--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -25,6 +25,6 @@
 
 <table id="inventoryDisplay"></table>
 
-<noscript>JavaScript must not be enabled to use this page.</noscript>
+<noscript>JavaScript must be enabled to use this page.</noscript>
 
 <script src="../../js/inventory.js"></script>
