Delete Process complete

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -6,7 +6,7 @@
 } %>
 
 <%# A message block available for messages we want to add to the page later%>
-<%- messages() %>
+<%# messages() %>
 
 <%# Code block to display errors %>
 <% if (errors) { %>
