--- a/views/account/account-manage.ejs
+++ b/views/account/account-manage.ejs
@@ -17,4 +17,7 @@
  </ul>
 <% } %>
 
+<h2><strong>Welcome, <%= locals.account_firstname %></strong></h2>
 <p>You're logged in.</p>
+
+<%- accountManage %>
