--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,11 @@
         <a href="/" title="Return to home page">CSE Motors</a>
     </span>
     <div id="tools">
-        <%# if (!isAuthenticated) { %>
-            <a title="Click to manage account" href="/account/">Welcome, <% locals.account_firstname %>!</a>
-            <a title="Click to logout" href="#">Logout</a>
-        <%# } else { %>
+        <% if (loggedin) { %>
+            <a title="Click to manage account" href="/account/">Welcome, <%= account_name %>!</a>
+            <a title="Click to logout" href="/account/logout">Logout</a>
+        <% } else { %>
             <a title="Click to log in" href="/account/login">My Account</a>
-        <%# } %>
+        <% } %>
     </div>
 </header>
