post results update for account info

--- a/views/account/account-manage.ejs
+++ b/views/account/account-manage.ejs
@@ -25,6 +25,10 @@
   <li><a href="/account/edit-account/<%= locals.accountData.account_id %>" title="Edit Account Information">Edit Account Information</a></li>
 </ul>
 
+<p><strong>First Name: </strong> <%= locals.accountData.account_firstname %></p>
+<p><strong>Last Name: </strong> <%= locals.accountData.account_lastname %></p>
+<p><strong>Email: </strong> <%= locals.accountData.account_email %></p>
+
 <% if (locals.accountData.account_type == 'Employee' || locals.accountData.account_type == 'Admin') { %>
   <h3>Manage Inventory</h3>
   <a title="Click to manage inventory" href="/inv/">Manage Inventory</a>
