--- a/views/account/edit-account.ejs
+++ b/views/account/edit-account.ejs
@@ -35,7 +35,7 @@
 </div>
 <div class="password-form">
     <p>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character.</p>
-    <form id="updatePassword" class="update-password-form" action="/account/edit" method="post">
+    <form id="updatePassword" class="update-password-form" action="/account/edit-password" method="post">
       <fieldset>
         <label for="account_password"><strong>Password</strong></label><br>
         <input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
